[package]
name = "rs_virtual_keyboard"
version = "0.1.0"
edition = "2021"
description = "A multilingual virtual keyboard"
license-file = "LICENSE"
repository = "https://github.com/racine-p-a/rs_virtual_keyboard"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.88"
js-sys = "0.3.65"
